# ctrack

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/ctrack/: arg_parser.cpp  arg_parser.h  concatenate.h  process.cpp  process.h
test/: CMakeLists.txt  arg_parser_test.cpp
